--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-  <main>
-    <class="container">
-      <div class="flex-column justify-space-between">
+  <main class="container">
+    
+      <div class="container">
         <h1>Search LoC</h1>
-        <form action="search.php" method="POST">
+        <form>
           <input type="text" name="search" placeholder="Search">
           <button type="submit" name="submit-search">Search</button>
         </form>
