--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <form>
           <input type="text" name="search" placeholder="Search">
           <button type="submit" name="submit-search">Search</button>
+          <button type="button" class="btn btn-primary">Primary</button>
         </form>
         <form>
           <label for="format">Select Format</label>
